--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@ web/bundles/*
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
+
+test.php
+
+# eclipse
+
+.buildpath
+.project
+.settings/*
+
