--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "satooshi/bitly",
+    "name": "dinacel/bitly",
     "description": "Bit.ly client",
     "keywords": ["rest", "api", "bitly"],
     "homepage": "https://github.com/satooshi/bitly",
